--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -8,8 +8,8 @@ site_description: >-
   documentation of your Open Source or commercial project – customizable,
   searchable, mobile-friendly, 40+ languages
 # Repository
-repo_name: YuhangZhou88/esl_test
-repo_url: https://github.com/YuhangZhou88/esl_test
+repo_name: YuhangZhou88/ESL_Solution
+repo_url: https://github.com/YuhangZhou88/ESL_Solution
 edit_uri: ""
 
 # Configuration
