--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -68,3 +68,5 @@ extra_javascript:
   - javascripts/config.js
   - https://polyfill.io/v3/polyfill.min.js?features=es6
   - https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js
+
+copyright: 'Copyright &copy; 2021-2021 Yuhang Zhou'  
