--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -70,3 +70,7 @@ extra_javascript:
   - https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js
 
 copyright: 'Copyright &copy; 2021-2021 Yuhang Zhou'  
+
+google_analytics:
+  - UA-194800147-1
+  - auto
