--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,12 +1,9 @@
 site_name: A Solution Manual for ESL
 
 
-# site_url: https://squidfunk.github.io/mkdocs-material/
 site_author: Yuhang Zhou
 site_description: >-
-  Create a branded static site from a set of Markdown files to host the
-  documentation of your Open Source or commercial project – customizable,
-  searchable, mobile-friendly, 40+ languages
+  Solution for ESL
 # Repository
 repo_name: YuhangZhou88/ESL_Solution
 repo_url: https://github.com/YuhangZhou88/ESL_Solution
