--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -71,4 +71,4 @@ copyright: 'Copyright &copy; 2022 Yuhang Zhou'
 extra:
   analytics:
     provider: google
-    property: UA-194800147-1
+    property: G-313169493
